<resources>
    <string name="app_name">FacebookClient</string>
    <string name="app_id">213537312429718</string>
    <string name="fb_login_protocol_scheme">fb213537312429718</string>

    <string name="noti1"> Your friend posted on your timeline </string>
    <string name="noti2"> Your friend liked your post </string>
    <string name="noti3"> Your friend commented on your post </string>
    <string name="noti4"> Your friend posted on your timeline </string>
    <string name="noti5"> Your friend liked your post in your group </string>
    <string name="noti6"> Your friend commented on your post in your group </string>
    <string name="noti7"> Your friend posted on your timeline </string>
    <string name="noti8"> Your friend liked your post in your page </string>
    <string name="noti9"> Your friend commented on your post in your page </string>
    <string name="noti10"> Your friend poked you </string>
    <string name="noti14"> Your friend hated you!</string>

    <string name="msg1"> Hello. Nice to meet you! </string>
    <string name="msg2"> Call me back </string>
    <string name="msg3"> Are you ok? </string>
    <string name="msg4"> Heyyyyy </string>
    <string name="msg5"> Good night! </string>
    <string name="msg6"> Bye </string>
    <string name="msg7"> :) </string>
    <string name="msg8"> Yes </string>
    <string name="msg9"> so? </string>
    <string name="msg10"> Ok. </string>

    <string name="noti11">2 days ago</string>
    <string name="noti12">1 day ago</string>
    <string name="noti13">22 hours ago</string>
    <string name="Monday"> Mon </string>
    <string name="Tuesday"> Tue</string>
    <string name="Wednesday"> Wed </string>
    <string name="Thursday"> Thur</string>
    <string name="Friday"> Fri </string>
    <string name="Saturday"> Sat </string>
    <string name="Sunday"> Sun </string>

    <string name="language">English</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="forgot_password"> Forgot Password?</string>
    <string name="notifications">Notifications</string>
    <string name="messages"> Messages </string>
    <string name="friends">Friends</string>

    <string name="search"><font size="5">Search...</font></string>
    <string name="action_search">Searching</string>
    <string name="refresh">Refresh</string>
    <string name="setting"> Setting</string>
    <string name="photo">Photo</string>
    <string name="status">Status</string>
    <string name="check_in">Check In</string>
    <string name="post1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>


    <string name="describe"> Describe yourself</string>
    <string name="post2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</string>
    <string name="post3">In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</string>
    <string name="post4">Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</string>
    <string name="post5">ayy lmaoo</string>

    <string name="introduce">Introduce</string>

    <string name="work"> Worked at 211b Baker Street</string>
    <string name="edu"> Educated from USTH</string>
    <string name="hometown"> From Hanoi</string>
    <string name="single"> Single</string>
    <string name="follow"> 100,000 followers</string>
    <string name="proflie"> Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="settings">Help and Settings</string>
    <string name="apps">App Settings</string>
    <string name="lang">Language </string>
    <string name="nf">New Feed Preferences</string>
    <string name="accseting">Account Settings</string>
    <string name="codegenerate">Code Generator</string>
    <string name="helpcenter">Help Center</string>
    <string name="activitylog">Activity Log</string>
    <string name="privacy"> Privacy Shortcuts</string>
    <string name="term"> Term and Policies</string>
    <string name="report">Report a problem</string>
    <string name="data"> Mobile data</string>
    <string name="action_settings">LogOut</string>


</resources>
