<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/searchwhite"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <!--<item-->
        <!--android:id="@+id/action_refresh"-->
        <!--android:icon="@drawable/refresh"-->
        <!--android:title="@string/refresh"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/setting"
        android:title="@string/help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/setting"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>