<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView1"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView2"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView3"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView4"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView5"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView6"
            android:gravity="left"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg7"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView7"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg8"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView8"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg9"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView9"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:text="@string/msg10"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView10"
            android:gravity="left"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>