<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFacebook">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/facebooklogo1"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:id="@+id/imageView2" />

        <TextView
            android:text="@string/language"
            android:textColor="@color/lightgray"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email_or_phone"
            android:textColorHint="@color/lightgray"
            android:textColor="@color/lightgray"
            android:ems="15"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:id="@+id/editText3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/lightgray"
            android:textColor="@color/lightgray"
            android:ems="15"
            android:layout_below="@+id/editText3"
            android:layout_alignRight="@+id/editText3"
            android:layout_alignEnd="@+id/editText3"
            android:layout_marginTop="38dp"
            android:id="@+id/editText4" />

        <Button
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:background="@color/colorLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:ems="20"
            android:id="@+id/button" />

        <TextView
            android:text="@string/forgot_password"
            android:textColor="@color/lightgray"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView2"
            android:layout_below="@+id/button"/>



        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </RelativeLayout>

</LinearLayout>