<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorFacebook"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView22"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"
                    android:textSize="25sp"
                    android:textStyle="normal|bold"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:layout_height="30dp"
                app:srcCompat="@drawable/setting"
                android:id="@+id/imageView3"
                android:layout_weight="0.01"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work3"
                android:text="@string/apps"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>


        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/lang"
                android:id="@+id/imageView4"
                android:layout_weight="0.01"
                android:layout_height="30dp"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work7"
                android:text="@string/lang"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/nf"
                android:id="@+id/imageView5"
                android:layout_weight="0.03"
                android:layout_height="30dp"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/htown"
                android:text="@string/nf"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp">

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:layout_height="30dp"
                app:srcCompat="@drawable/acc"
                android:id="@+id/imageView7"
                android:layout_weight="0.01"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work9"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03"
                android:text="@string/accseting" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:layout_height="30dp"
                app:srcCompat="@drawable/lock"
                android:id="@+id/imageView8"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work10"
                android:text="@string/codegenerate"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:layout_height="30dp"
                app:srcCompat="@drawable/qs"
                android:id="@+id/imageView9"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work1"
                android:text="@string/helpcenter"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                android:layout_height="30dp"
                app:srcCompat="@drawable/log"
                android:id="@+id/imageView10"
                android:layout_weight="0.00"
                android:layout_width="30dp" />

            <TextView
                android:id="@+id/work6"
                android:text="@string/activitylog"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/privacy"
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/hometown"
                android:text="@string/privacy"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/policy"
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/work"
                android:text="@string/term"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/report"
                android:id="@+id/imageView13"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/work13"
                android:text="@string/report"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="7dp"></LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                app:srcCompat="@drawable/data"
                android:id="@+id/imageView14"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/work5"
                android:text="@string/data"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="0.03" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>